clone, commit id extraction modified